--- a/index.html
+++ b/index.html
@@ -21,25 +21,8 @@
 			<h2>Camilla <span>♥</span> Alexander</h2>
 		</div>
 	</div>
-	
-	<!--
-	<div data-magellan-expedition="fixed">
-		<div class="row">
-			<div class="large-12 columns">
-				<ul class="sub-nav">
-					<li data-magellan-arrival="program"><a href="#program">Program</a></li>
-					<li data-magellan-arrival="transport"><a href="#transport">Tranpsort</a></li>
-					<li data-magellan-arrival="overnatting"><a href="#overnatting">Overnatting</a></li>
-					<li data-magellan-arrival="onskeliste"><a href="#onskeliste">Ønskeliste</a></li>
-					<li data-magellan-arrival="annet"><a href="#annet">Annet</a></li>
-				</ul>
-			</div>
-		</div>
-	</div>
-	-->
-	
 
-	<div id="content" class="row framed">
+	<div class="row framed">
 		<div class="large-12 columns">
 			<a name="program"></a>
 			<h3 data-magellan-destination="program">Program for dagen</h3>
